--- a/cv.html
+++ b/cv.html
@@ -2210,19 +2210,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year">
    <h4>2011</h4>
    </div><div class="title">
-   <h4>&emsp;Curso de Teor&iacute;a de Grafos aplicando el método de Moore</h4></div>
-   <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(Graph Theory Course applying Moore's Method)</em></h4></div>
-     <div class="property">Organizer:</div><div class="value">Luis Mart&iacute;nez</div>
-     <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Faculty of Science and Technology (ZTF-FCT)</a> of the <a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
-     <div class="property">Location:</div><div class="value">Leioa, Spain</div>
-     <div class="property">Date:</div><div class="value"> September to December of 2011</div>
-   </div>
-
-   <br/><div class="cv">
-   <div class="year">
-
-   </div><div class="title">
    <h4>&emsp;Undergraduate Summer School Program of the</h4></div>
    <div class="year"></div><div class="title">
    <h4>&#160;&#160;<a href="https://static.ias.edu/pcmi/2011/">2011 PCMI Summer Session &ldquo;Moduli Spaces of Riemann Surfaces&rdquo;</a></h4></div>
@@ -2273,7 +2260,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="year">
      <h4>2022</h4>
      </div><div class="title">
-     <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">IMSI’s MathComms Bootcamp 2: How to Write for a General Audience</a></h4></div>
+     <h4>&emsp;IMSI's MathComms Bootcamp 2: How to Write for a General Audience</h4></div>
        <div class="property">Organizer:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
        <div class="property">Lecturer:</div><div class="value"><a href="https://www.sadiewit.com/">Sadie Witkowski </a></div>
        <div class="property">Location:</div><div class="value">On-line</div>
@@ -2463,6 +2450,22 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Location:</div><div class="value">Arnuero, Spain</div>
         <div class="property">Date:</div><div class="value">31st of August of 2012</div>
       </div>
+
+    <!-- 2011
+    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+     <br/><div class="cv">
+     <div class="year">
+     <h4>2011</h4>
+     </div><div class="title">
+     <h4>&emsp;Curso de Teor&iacute;a de Grafos aplicando el método de Moore</h4></div>
+     <div class="year"></div><div class="title">
+     <h4>&ensp;&emsp;<em>(Graph Theory Course applying Moore's Method)</em></h4></div>
+       <div class="property">Organizer:</div><div class="value">Luis Mart&iacute;nez</div>
+       <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Faculty of Science and Technology (ZTF-FCT)</a> of the <a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
+       <div class="property">Location:</div><div class="value">Leioa, Spain</div>
+       <div class="property">Date:</div><div class="value"> September to December of 2011</div>
+     </div>
 
    <!-- Olympiads
    ================================================== -->
