--- a/cv_es.html
+++ b/cv_es.html
@@ -2309,17 +2309,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year">
    <h4>2011</h4>
    </div><div class="title">
-   <h4>&emsp;Curso de Teor&iacute;a de Grafos aplicando el método de Moore</h4></div>
-     <div class="property">Organizador:</div><div class="value">Luis Mart&iacute;nez</div>
-     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnología (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
-     <div class="property">Lugar:</div><div class="value">Leioa, España</div>
-     <div class="property">Fecha:</div><div class="value">de septiembre a diciembre del 2011</div>
-   </div>
-
-   <br/><div class="cv">
-   <div class="year">
-
-   </div><div class="title">
    <h4>&emsp;Undergraduate Summer School Program of the</h4></div>
    <div class="year"></div><div class="title">
    <h4>&#160;&#160;<a href="https://static.ias.edu/pcmi/2011/">2011 PCMI Summer Session &ldquo;Moduli Spaces of Riemann Surfaces&rdquo;</a></h4></div>
@@ -2369,7 +2358,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="year">
      <h4>2022</h4>
      </div><div class="title">
-     <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">IMSI’s MathComms Bootcamp 2: How to Write for a General Audience</a></h4></div>
+     <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">IMSI's MathComms Bootcamp 2: How to Write for a General Audience</a></h4></div>
      <div class="year"></div><div class="title">
      <h4>&ensp;&emsp;<em>(MathComms Bootcamp 2 del IMSI: Cómo Escribir para una Audiencia General)</em></h4></div>
        <div class="property">Organizador:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
@@ -2525,8 +2514,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Fecha:</div><div class="value">16 de octubre del 2013</div>
       </div>
 
-<!-- 2012
-   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
 
       <br/><div class="cv">
       <div class="year">
@@ -2539,6 +2527,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Institución anfitriona:</div><div class="value">Observatorio del Arte de Arnuero</div>
         <div class="property">Lugar:</div><div class="value">Arnuero, España</div>
         <div class="property">Fecha:</div><div class="value">31 de agosto del 2012</div>
+      </div>
+
+<!-- 2011
+    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2011</h4>
+      </div><div class="title">
+      <h4>&emsp;Curso de Teor&iacute;a de Grafos aplicando el método de Moore</h4></div>
+        <div class="property">Organizador:</div><div class="value">Luis Mart&iacute;nez</div>
+        <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnología (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
+        <div class="property">Lugar:</div><div class="value">Leioa, España</div>
+        <div class="property">Fecha:</div><div class="value">de septiembre a diciembre del 2011</div>
       </div>
 
    <!-- Olympiads
