--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -102,16 +102,16 @@
 <hr>
 <div id="designs">
   <h2 class="display-4">Diseños</h2>
-  <p>Estos son algunas portada, imágenes y carteles que he diseñado. Algunos de estos diseños están disponibles en <span><a href="https://www.redbubble.com/people/IasafroMaesman/shop">RedBubble</a></span> para pedir pegatinas, imanes, postales, camisetas, cuadernos, etc.</p>
+  <p>Estos son algunas portada, imágenes y carteles que he diseñado. Algunos de estos diseños están disponibles en <span><a href="https://IasafroMaesman.redbubble.com">RedBubble</a></span> para pedir pegatinas, imanes, postales, camisetas, cuadernos, etc.</p>
   <h3>Carteles diseñados para eventos</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
-    </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">&ensp;Página web del evento&ensp;</a>
-    <a style="float:right;" href="design/felipefest_poster1.png">&ensp;Cartel del evento&ensp;</a></span>
-    <span><a style="float:left;" href="design/felipefest_poster2.png">&ensp;1ª versión rechazada&ensp;</a>
-    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2ª versión rechazada&ensp;</a></span>
+    </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">Página web del evento</a>
+    <a style="float:right;" href="design/felipefest_poster1.png">Cartel del evento</a></span>
+    <span><a style="float:left;" href="design/felipefest_poster2.png">1ª versión rechazada</a>
+    <a style="float:right;" href="design/felipefest_poster3.png">2ª versión rechazada</a></span>
     </div>
 
     <!--<div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -131,15 +131,15 @@
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/bmsstudconf6_poster_red.jpg" alt="Poster of 6th BMS Student Conference"/></a>
     <p style="margin:0;text-align:center;padding-bottom:1.45em;"><b>6th BMS Student Conference</b><br/>Febrero de 2018
-    </p><span><a style="float:left;" href="https://bmsstudconf.github.io/2018/index.html">&ensp;Página web del evento&ensp;</a>
-    <a style="float:right;" href="design/bmsstudconf6_poster.jpg">&ensp;Cartel del evento&ensp;</a></span>
+    </p><span><a style="float:left;" href="https://bmsstudconf.github.io/2018/index.html">Página web del evento</a>
+    <a style="float:right;" href="design/bmsstudconf6_poster.jpg">Cartel del evento</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/algnum_poster_red.jpg" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Algebra meets Numerics<br/>Condition and Complexity</b><br/>November de 2017
-    </p><span><a style="float:left;" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2017ws/algebra_meets_numerics_condition_and_complexity/">&ensp;Página web del evento&ensp;</a>
-    <a style="float:right;" href="design/algnum_poster.jpg">&ensp;Cartel del evento&ensp;</a></span>
+    </p><span><a style="float:left;" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2017ws/algebra_meets_numerics_condition_and_complexity/">Página web del evento</a>
+    <a style="float:right;" href="design/algnum_poster.jpg">Cartel del evento</a></span>
     </div>
 
   </div>
@@ -148,19 +148,19 @@
   <div class="row" style="padding-top:1em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 1<br/>Octubre de 2011</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 1<br/>Octubre 2011</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle01.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada01.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 2<br/>November-Diciembre de 2011</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 2<br/>November-Diciembre 2011</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle02.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada02.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 3<br/>Enero-Febrero de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 3<br/>Enero-Febrero 2012</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle03.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada03.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -168,19 +168,19 @@
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 4<br/>Marzo-Abril de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 4<br/>Marzo-Abril 2012</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle04.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada04.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 5<br/>Septiembre-Octubre de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 5<br/>Septiembre-Octubre 2012</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle05.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada05.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 6<br/>November-Diciembre de 2012/Enero de 2013</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 6<br/>November-Diciembre 2012/Enero 2013</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle06.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada06.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -190,19 +190,19 @@
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 7<br/>Febrero-Marzo-Abril-May de 2013</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 7<br/>Febrero-Marzo-Abril-May 2013</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle07.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada07.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 8<br/>Septiembre-Octubre de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 8<br/>Septiembre-Octubre 2012</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle08.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada08.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="https://pikasle.com/pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 9<br/>November-Diciembre de 2013/Enero de 2014</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 9<br/>November-Diciembre 2013/Enero 2014</b>
   </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle09.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="https://pikasle.com/pikasle/portada09.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -249,6 +249,12 @@
     </p>
     <span><a href="https://pikasle.com/pikasle/design3.png">&ensp;Link a imagen&ensp;</a></span>
     </div>
+  </div>
+  <hr>
+  <div class="row" align="center">
+  <div class="col" align="center">
+  <a class="btn btn-secondary" href="redbubble.html" role="button" style="width:70%;">Portfolio Externo de RedBubble</a>
+  </div>
   </div>
 
 </div>
