--- a/multimedia.html
+++ b/multimedia.html
@@ -101,7 +101,7 @@
 <hr>
 <div id="designs">
   <h2 class="display-4">Designs</h2>
-  <p>These are some of the cover, images and posters that I designed. Some of these designs are available at <span><a href="https://www.redbubble.com/people/IasafroMaesman/shop">RedBubble</a></span> for ordering stickers, magnets, postcards, T-shirts, notebooks, etc.</p>
+  <p>These are some of the cover, images and posters that I designed. Some of these designs are available at <span><a href="https://IasafroMaesman.redbubble.com">RedBubble</a></span> for ordering stickers, magnets, postcards, T-shirts, notebooks, etc.</p>
   <h3>Designed posters for events</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -252,7 +252,12 @@
     <span><a href="https://pikasle.com/pikasle/design3.png">&ensp;Link to image&ensp;</a></span>
     </div>
   </div>
-
+  <hr>
+  <div class="row" align="center">
+  <div class="col" align="center">
+  <a class="btn btn-secondary" href="redbubble.html" role="button" style="width:70%;">RedBubble External Portfolio</a>
+  </div>
+  </div>
 </div>
 <hr>
 <div id="photos">
@@ -533,6 +538,13 @@
     if (screen.width <= 699) {
     document.getElementById("navbarCV").innerHTML="";
     document.getElementById("finalsentence").innerHTML="";
+    document.getElementById("finalsentence").innerHTML="";
+    var x;
+    x = document.getElementsByClassName("btn btn-secondary");
+    var i;
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
     }
     //-->
     </script>
