--- a/multimedia.html
+++ b/multimedia.html
@@ -108,9 +108,9 @@
     <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August 2019
     </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">&ensp;Webpage of the event&ensp;</a>
-    <a style="float:right;" href="design/felipefest_poster1.png">&ensp;Poster of the event&ensp;</a></span>
-    <span><a style="float:left;" href="design/felipefest_poster2.png">&ensp;1st rejected poster&ensp;</a>
-    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2nd rejected poster&ensp;</a></span>
+    <a style="float:right;" href="design/felipefest_poster1.png">Poster of the event</a></span>
+    <span><a style="float:left;" href="design/felipefest_poster2.png">1st rejected poster</a>
+    <a style="float:right;" href="design/felipefest_poster3.png">2nd rejected poster</a></span>
     </div>
 
     <!--<div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -130,15 +130,15 @@
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/bmsstudconf6_poster_red.jpg" alt="Poster of 6th BMS Student Conference"/></a>
     <p style="margin:0;text-align:center;padding-bottom:1.45em;"><b>6th BMS Student Conference</b><br/>February 2018
-    </p><span><a style="float:left;" href="https://bmsstudconf.github.io/2018/index.html">&ensp;Webpage of the event&ensp;</a>
-    <a style="float:right;" href="design/bmsstudconf6_poster.jpg">&ensp;Poster of the event&ensp;</a></span>
+    </p><span><a style="float:left;" href="https://bmsstudconf.github.io/2018/index.html">Webpage of the event</a>
+    <a style="float:right;" href="design/bmsstudconf6_poster.jpg">Poster of the event</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/algnum_poster_red.jpg" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Algebra meets Numerics<br/>Condition and Complexity</b><br/>November 2017
-    </p><span><a style="float:left;" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2017ws/algebra_meets_numerics_condition_and_complexity/">&ensp;Webpage of the event&ensp;</a>
-    <a style="float:right;" href="design/algnum_poster.jpg">&ensp;Poster of the event&ensp;</a></span>
+    </p><span><a style="float:left;" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2017ws/algebra_meets_numerics_condition_and_complexity/">Webpage of the event</a>
+    <a style="float:right;" href="design/algnum_poster.jpg">Poster of the event</a></span>
     </div>
 
   </div>
