--- a/cv_es.html
+++ b/cv_es.html
@@ -488,15 +488,28 @@
       </div></div>
 
       <br/><div class="cv">
-       <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
+       <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
        <div class="pretalktitle"></div>
+      </div>
+
+      <br/><div class="cv">
+       <div class="year"></div><div class="paper"><h4>&emsp;On the sampling error for parametric curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832" role="button">arXiv:2203.02832</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://tolischal.github.io/">Apostolos Chalkis</a> and <a href="https://webusers.imj-prg.fr/~christina.katsamaki/">Christina Katsamaki</a>)</div>
+      </div>
+
+      <br/><div class="cv">
+       <div class="year"></div><div class="paper"><h4>&emsp;A Near-Optimal Expected Boolean Complexity Bound for Descartes Solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+      </div>
+
+      <br/><div class="cv">
+       <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
       </div>
 
       <br/><div class="cv">
        <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-       <div class="pretalktitle"></div>
       </div>
 
       <br/><div class="cv">
@@ -745,6 +758,15 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Charlas invitadas en seminarios</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://lfant.math.u-bordeaux.fr/index.php?category=seminar">Seminar of the LFANT project team at Institut de Mathématiques de Bordeaux</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario del proyecto-equipo LFANT en el Institut de Mathématiques de Bordeaux)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://lfant.math.u-bordeaux.fr/index.php?category=seminar&page=2021">A $p$-adic Descartes solver: the Strassman solver</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.math.u-bordeaux.fr/imb/spip.php">Institut de Mathématiques de Bordeaux</a></div>
+        <div class="property">Lugar:</div><div class="value">Bourdeaux, Francia</div>
+        <div class="property">Fecha:</div><div class="value">12 de abril del 2022</div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2021ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
