--- a/research_es.html
+++ b/research_es.html
@@ -155,15 +155,28 @@
   </div></div>
 
   <br/><div class="cv">
-   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
    <div class="pretalktitle"></div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;On the sampling error for parametric curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832" role="button">arXiv:2203.02832</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://tolischal.github.io/">Apostolos Chalkis</a> and <a href="https://webusers.imj-prg.fr/~christina.katsamaki/">Christina Katsamaki</a>)</div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;A Near-Optimal Expected Boolean Complexity Bound for Descartes Solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
   </div>
 
   <br/><div class="cv">
    <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-   <div class="pretalktitle"></div>
   </div>
 
   <br/><div class="cv">
