--- a/aboutme.html
+++ b/aboutme.html
@@ -16,9 +16,15 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: About me" /><!--35char-->
     <meta property="og:description" content="Biography and self-description"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM1.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: About me" />
+    <meta name="twitter:description" content="Biography and self-description of Josué Tonelli-Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_aboutme.JPG" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-
     <!--  Custom styles for this template  -->
     <link href="css/style2.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
