--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,13 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: Contact" /><!--35char-->
     <meta property="og:description" content="Contact information and social media"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
-
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Contact" />
+    <meta name="twitter:description" content="Contact information and social media of Josué Tonelli-Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/contact2.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
