--- a/contact_es.html
+++ b/contact_es.html
@@ -16,9 +16,15 @@
     <meta property="og:title" content="Josué Tonelli Cueto: Contacto" /><!--35char-->
     <meta property="og:description" content="Información de contacto y redes sociales"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Contacto" />
+    <meta name="twitter:description" content="Información de contacto y redes sociales de Josué Tonelli Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/contact2.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-
     <!--  Custom styles for this template  -->
     <link href="css/style.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
