--- a/cv_es.html
+++ b/cv_es.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://tonellicueto.xyz/cv_es.html" />
     <meta property="og:title" content="Josué Tonelli Cueto: CV" /><!--35char-->
     <meta property="og:description" content="Currículum vitae académico completo"><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
     <meta name="twitter:title" content="Josué Tonelli-Cueto: Currículum Vitae académico" />
     <meta name="twitter:description" content="Curriculum vitae académico completo de Josué Tonelli Cueto." />
-    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_index.JPG" />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
