--- a/index_es.html
+++ b/index_es.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://tonellicueto.xyz/index_es.html" />
     <meta property="og:title" content="Josué Tonelli-Cueto: Página web" /><!--35char-->
     <meta property="og:description" content="Página web personal de Josué Tonelli-Cueto"><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
     <meta name="twitter:title" content="Josué Tonelli-Cueto: Página web personal" />
     <meta name="twitter:description" content="Esta página web contiene la investigación, intereses y más información sobre Josué Tonelli Cueto." />
-    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_index.JPG" />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
