--- a/multimedia.html
+++ b/multimedia.html
@@ -15,7 +15,14 @@
     <meta property="og:url" content="https://tonellicueto.xyz/multimedia.html" />
     <meta property="og:title" content="Josué Tonelli-Cueto: Multimedia" /><!--35char-->
     <meta property="og:description" content="Designs, images and videos"><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Multimedia" />
+    <meta name="twitter:description" content="Designs, images and videos of Josué Tonelli-Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
