--- a/research_es.html
+++ b/research_es.html
@@ -15,10 +15,16 @@
     <meta property="og:url" content="https://tonellicueto.xyz/research_es.html" />
     <meta property="og:title" content="Josué Tonelli Cueto: Investigación" /><!--35char-->
     <meta property="og:description" content="Intereses matemáticos y publicaciones académicas"><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli Cueto: Investigación" />
+    <meta name="twitter:description" content="Intereses matemáticos y publicaciones académicas de Josué Tonelli Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-
     <!--  Custom styles for this template  -->
     <link href="css/style2.css" rel="stylesheet"/>
     <link href="css/style_cv.css" rel="stylesheet"/>
