--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="jumbotron" style="margin-bottom: 0px;">
  <div class="row" style="display: flex;">
   <div class="col-md-5" align="center">
-        <img id="profilepic" itemprop="image" src="imgs/index000.png" style="width: 80%;" class="img-responsive center_image" alt="Picture of Josué Tonelli-Cueto at the TU Berlin" onclick="changeProfileImage()"/>
+        <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Picture of Josué Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
   </div>
   <div class="col-md-7">
         <center>
@@ -150,6 +150,7 @@
 <footer style="padding-top:1em;">
     <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
+    <p style="text-align:left;" id="copyrightimage">&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
@@ -164,22 +165,31 @@
     <script type="text/javascript">
     <!--
     let count=0;
-    let profimgs=2;
+    let profimgs=3;
     let lim=3*profimgs;
     function changeProfileImage() {
     count++;
     if (count < lim){
-     if (count%2 == 1)
+     if (count%profimgs == 2)
      {
          document.getElementById("profilepic").style="width: 66.5%;"
          document.getElementById("profilepic").src = "imgs/index001.jpg";
          document.getElementById("profilepic").alt = "Portrait of Josué Tonelli-Cueto by Emmi Arvidsson";
+         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Emmi Arvidsson";
      }
-     else if (count%2 == 0)
+     else if (count%profimgs == 0)
+     {
+         document.getElementById("profilepic").style="width: 66.5%;"
+         document.getElementById("profilepic").src = "imgs/index002.jpg";
+         document.getElementById("profilepic").alt = "Picture of Josué Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier";
+         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier";
+     }
+     else if (count%profimgs == 1)
      {
          document.getElementById("profilepic").style="width: 80%;"
          document.getElementById("profilepic").src = "imgs/index000.png";
-         document.getElementById("profilepic").alt = "Picture of Josué Tonelli-Cueto at the TU Berlin";
+         document.getElementById("profilepic").alt = "Picture of Josué Tonelli-Cueto at TU Berlin";
+         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Evgeniya Lagoda";
      }
     }
     else if (count == lim)
@@ -187,12 +197,14 @@
         document.getElementById("profilepic").style="width: 62.7%;"
         document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen saying that there are no more clicks";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josué Tonelli-Cueto";
     }
-    else if (count == lim*lim)
+    else if (count == 5*profimgs)
     {
         document.getElementById("profilepic").style="width: 73.5%;"
         document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen peeing";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josué Tonelli-Cueto";
     }
     else {}
     }
