--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
-    <p style="text-align:left;" id="copyrightimage">&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;" id="copyrightimage">&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
