--- a/index_es.html
+++ b/index_es.html
@@ -146,9 +146,9 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
-    <p style="text-align:left;" id="copyrightimage">&emsp;&emsp;Retrato: &copy; Inria / Photo B. Fourrier</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;" id="copyrightimage">&emsp;&emsp;Retrato: &copy; Inria / Photo B. Fourrier</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
