--- a/cv.html
+++ b/cv.html
@@ -241,7 +241,7 @@
       <br/><div class="cv">
       <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellowship</a></h4></div>
         <div class="property">Framework:</div><div class="value">"Interaction" program of 2020</div>
-        <div class="property">Awarding Institution:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Foundation Sciences Mathématiques de Paris (FSMP)</a></div>
+        <div class="property">Awarding Institution:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Fondation Sciences Mathématiques de Paris (FSMP)</a></div>
         <div class="property">Duration:</div><div class="value">October 2020 - September 2022</div>
       </div>
 
