--- a/cv_es.html
+++ b/cv_es.html
@@ -245,7 +245,7 @@
       <div class="year"></div><div class="title">
       <h4>&ensp;&emsp;<em>(Beca postdoctoral de la Fundación para las Ciencias Matemáticas de París)</em></h4></div>
         <div class="property">Contexto:</div><div class="value">Programa "Interaction" de 2020</div>
-        <div class="property">Institución dadora:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Foundation Sciences Mathématiques de Paris (FSMP)</a></div>
+        <div class="property">Institución dadora:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Fondation Sciences Mathématiques de Paris (FSMP)</a></div>
         <div class="property">Duración:</div><div class="value">octubre 2020 - septiembre 2022</div>
       </div>
 
