--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -25,23 +25,41 @@
     <link href="css/socialmedia.css" rel="stylesheet"/>
 </head>
 
-  <body>
+  <body style="margin-top: 0px;padding-top: 0rem;">
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
 <div class="container" style="text-align:justify;">
 <br/>
-
+<h3>Teatro Español à Paris</h3>
 <p sytle="text-align: justify;">
-El grupo amateur <em>Teatro Español à París</em> realizará su representación el jueves 29 de junio de 2022 a las 21:00 en Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris). Las entras son entradas colaboratibas con un precio mínimo de 3 euros y un máximo de 5 euros. Par adquirir tus entradas, realiza tu pago a traves de Lydia:
+El grupo amateur <em>Teatro Español à París</em> realizará su primera representación el jueves 29 de junio de 2022 a las 21:00 en Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris). Las entradas son colaborativas, así tienen un precio mínimo de 3 euros hasta un precio máximo de 5 euros según el importe que la persona quiera pagar. Par adquirir tus entradas, realiza tu pago a traves de Lydia:
 </p>
 <div class="row" align="center" style="font-size:2vw;">
     <div class="col">
       <a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;">Compra tus entradas</a>
     </div>
 </div>
+<p sytle="text-align:justify;padding-top:1em;">Más información sobre las entradas en: teatroespanolentradas@gmail.com</p>
+<h4>Detalles</h4>
+<p sytle="text-align: justify;">
+<b>¿Cuándo?</b> 29 de junio de 2022<br/>
+<b>¿A qué hora?</b> A las 21:00<br/>
+<b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
+<b>¿Cuánto?</b> De 3 a 5 euros<br/>
+<b>¿Cómo adquiero las entradas?</b> A traves de <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">nuestro link en Lydia</a>.
+</p>
 
-<p sytle="text-align:justify;">Más información sobre las entradas en: teatroespanolentradas@gmail.com</p>
+<div class="row" style="padding-bottom:2em;">
+<div class="col-md-6" style="text-align:center;">
+<a href="imgs/PosterTeatro1.jpg"><img style="width:90%;" src="imgs/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
+</div>
+<div class="col-md-6" style="text-align:center;">
+<a href="imgs/PosterTeatro2.jpg"><img style="width:90%;" src="imgs/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
+</div>
+</div>
+
+
 
 <br/>
 </div>
