--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -7,11 +7,11 @@
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Teatro Español à Paris (30/6 & 4/7)</title>
-    <meta name="description" content="Página de la obra de teatro..." />
+    <meta name="description" content="Página de la representación de los grupos amateurs de teatro <<Teatro Español à Paris>> en París" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
-    <meta property="og:url" content="https://tonellicueto.xyz/contact.html" />
+    <meta property="og:url" content="https://tonellicueto.xyz/teatroespanolaparis2022.html" />
     <meta property="og:title" content="Teatro Español à Paris (30/6 & 4/7)" /><!--35char-->
     <meta property="og:description" content=""><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/logo2.png"><!--300KB and minimum dimensions of 300 x 200-->
